corrected word breaks in the folder path

--- a/style.css
+++ b/style.css
@@ -52,6 +52,7 @@ code {
 }
 
 .wrapper {
+    white-space: nowrap;
     display: flex;
     gap: .5rem;
 }
